# atoms_demo

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
.agent/: api-contract.md  architecture.md  index.md  permission.md  product.md  routes.md  ui-rules.md  validation.md
.agent/roles/: implementer.md  planner.md  reviewer.md
.agent/workflows/: app-generation.md  notes-structuring.md  oauth-login.md  prompt-refinement.md  ssh-terminal.md
docs/: atoms-demo-interview-delivery.md
src/: ai.rs  auth.rs  db.rs  errors.rs  init.rs  main.rs  mock.rs  models.rs  routes.rs  servers.rs  state.rs  time.rs
src/ai/: parser.rs  prompt.rs
src/servers/: terminal.rs
web/: .env.example  app.config.ts  dist  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/assets/css/: main.css
web/components/: AgentSteps.vue  AppStatusBadge.vue  AuthStatus.vue  CodeEditor.vue  FileTreeNode.vue  GeneratedResultTabs.vue  InitStatusBadge.vue  MessageLog.vue  PreviewMockApp.vue  SandboxPreview.vue  ServerStatusBadge.vue  StateBlock.vue
web/composables/: useApiRequest.ts  useAppsApi.ts  useAuthApi.ts  useInitApi.ts  useNotesApi.ts  useServersApi.ts
web/layouts/: default.vue
web/locales/: en.json  zh.json
web/pages/: index.vue  initialize.vue
web/pages/app/: new.vue
web/pages/app/[id]/: preview.vue  workspace.vue
web/pages/auth/: callback.vue
web/pages/index/: index.vue
web/pages/notes/: index.vue
web/pages/servers/: index.vue
web/pages/settings/: index.vue
web/plugins/: force-dark.client.ts  lucide.client.ts
web/types/: apps.ts
(+2 files in other folders)
